<?xml version="1.0"?>
<package>
  <name>turtlebot_teleop</name>
  <version>0.0.1</version>
  <description>Teleoperation for CRAWLAB TurtleBot</description>

  <author email="joshua.vaughan@louisiana.edu">Joshua Vaughan</author>

  <maintainer email="joshua.vaughan@louisiana.edu">Joshua Vaughan</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ucs.louisiana.edu/~jev9637/</url>
  <url type="bugtracker">https://github.com/crawlab/crawlab_teleop/issues</url>
  <url type="repository">https://github.com/crawlab/crawlab_teleop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>joy</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>